[package]
name = "jsonml"
version = "0.5.0"
authors = ["gemmaro <gemmaro.dev@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "JsonML deserialization and serialization"
repository = "https://gitlab.com/gemmaro/rust-jsonml"
keywords = ["json", "serde", "markup"]

[dependencies]
html-escape = ">=0.2.13"
serde = { version = ">=1.0.152", features = ["derive"] }
void = ">=1.0.2"

[dev-dependencies]
serde_json = ">=1.0.92"
serde_test = ">=1.0.152"
